@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 20XX-XX-XX  Release 7.30.2                                     ---
 ----------------------------------------------------------------------
 
+* fixed a locking condition in MGED's rtcheck command - Cliff Yapp
 * added support for >=< prefixes for mater -d get options Cliff Yapp
 * fixed brlman lookup location of html manual pages - Cliff Yapp
 * fixed rt -t top-to-bottom parallel rendering option  Sean Morrison
